@@ -9,6 +9,8 @@
 
 * Fixed unwanted unselection of items when right-clicked the desktop.
 
+* Fixed endless loop in desktop items placement in some corner cases.
+
 
 Changes on 1.2.4 since 1.2.3:
 
